Update version number to 0.9.8 Added /db/_schemas API endpoint
